# ipc-benchmarking

./: README.md  Readme.md
commons/: Makefile  commons.c  commons.h
myxpmem/: Makefile  Readme.md  xpmem_proc1  xpmem_proc1.c  xpmem_proc2  xpmem_proc2.c  xpmem_test.h
pipe/: ge.c  pipe.c
process_vm/: Makefile  process_vm.c  process_vm.h
psvm/: reader  (+9 more)
xpmem12/: .version  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  cray-xpmem.pc  libtool  module
xpmem12/.hg/: hgrc  last-message.txt
xpmem12/.hg/store/: 00manifest.i  fncache
xpmem12/.hg/store/data/: 56-cray-xpmem.rules.i  _a_u_t_h_o_r_s.i  _makefile.am.i  autogen.sh.i
xpmem12/.hg/store/data/kernel/: _makefile.am.i  modules.order.i  xpmem.in.i  xpmem__attach.c.i  xpmem__main.c.i  xpmem__misc.c.i  xpmem__pfn.c.i
xpmem12/.hg/store/data/lib/: cray-xpmem.conf.in.i  libxpmem.c.i
xpmem12/.hg/store/data/test/: _makefile.am.i  run.sh.in.i  xpmem__proc2.c.i
xpmem12/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
xpmem12/include/: Makefile  Makefile.in
xpmem12/kernel/: Kbuild  Makefile  Makefile.in  xpmem_private.h
xpmem12/lib/: Makefile  Makefile.in  cray-xpmem.conf
xpmem12/lib/.deps/: libxpmem.Plo
xpmem12/test/: Makefile  Makefile.in  run.sh  xpmem_master  xpmem_master.c  xpmem_proc1  xpmem_proc1.c  xpmem_proc2  xpmem_proc2.c
xpmem12/test/.deps/: xpmem_master.Po  xpmem_proc1.Po  xpmem_proc2.Po
xpmem12/test/.libs/: xpmem_master  xpmem_proc1  xpmem_proc2
xpmem12/test/include/: xpmem_test.h
(+467 files in other folders)
